--- a/_posts/2023-02-04-INMEDIA-民間自發回收盆菜兜做轉贈-盼企業同行返一步.html
+++ b/_posts/2023-02-04-INMEDIA-民間自發回收盆菜兜做轉贈-盼企業同行返一步.html
@@ -15,7 +15,7 @@ author: 獨媒報導
 <p>自2021年，網民Gigichibaby Laurel發起「盆菜兜重用回收行動」，邀請20多個收集點，包括環保團體、政府回收站、「Mil Mill喵坊」等，回收市民的盆菜兜，再轉贈予不同地點，例如狗場、劏房戶及無家者，餸隔則供農場用作驅雀。</p>
 <p>一直關注環保議題的Gigichibaby Laurel早在數年前，已著手收集及轉贈盆菜兜。但隨著疫情加劇，港人更常叫外賣，企業亦為了迎合市場需求而大量出售盆菜；眼見盆菜兜的生產及棄置量均達高峰，她決定擴大收集規模，「都係盡做㗎咋。」</p>
 <p>位於葵涌的「綠惜地球」是其中一個收集點。社區協作總監Vivien表示，「綠惜地球」以往亦曾考慮收集盆菜兜，但沒有實行，一來是希望食肆自行負起回收責任，二來組織不設回收中心，不便市民。後來獲Gigichibaby Laurel邀請，她才加入行動。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/pN3h23a93g" title="無標題"><img src="https://live.staticflickr.com/65535/52667142008_66aa9e2a58.jpg" width="500" alt="無標題" /></a><br /><em>葵涌綠惜地球社區協作總監Vivien</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/pN3h23a93g" title="無標題"><img src="https://live.staticflickr.com/65535/52667142008_66aa9e2a58.jpg" width="500" alt="無標題" /></a><br /><em>綠惜地球社區協作總監Vivien</em></p>
 <p><strong>嘆最困難是大集團拒回收  批「賺盡就冇做後續處理」</strong></p>
 <p>統籌、收集生產商名單、聯絡轉贈機構等工作，全由Gigichibaby Laurel一手包辦。她卻坦言，最大困難並非一人工作，亦非公眾迴響，「真正困難係講緊，公司肯唔肯重用自己嘅盆菜兜。」去年，她逐一聯絡由市民提供的盆菜生產商名單，邀請他們重用自己生產的盆菜兜，做到源頭減廢。但眾多企業中，只有太興、Mr. Cool及輝記願意加入，當中「負面回應係好多好多。」</p>
 <p>令她失望的是，不少連鎖大集團都拒絕參與計劃，但大企業分店多、規模大、生產量及使用量亦最龐大，理論上應該更容易做到收集及重用。自2016年1月1日起，本港所有上市公司都需要遵守《環境、社會及管治（ESG）報告指引》進行報告。但她批評，不少企業ESG報告與實際情況不符，「賺盡就冇做後續處理」。她強調並非想強迫企業照做，但認為履行社會責任又顧及環境保護，亦可改善企業形象吸引顧客回流，長遠而言對企業本身亦有好處。</p>
