--- a/_posts/2023-02-03-PQ-憂-台灣有事-戰火波及-日本將進行沖繩離島居民疏散推演.html
+++ b/_posts/2023-02-03-PQ-憂-台灣有事-戰火波及-日本將進行沖繩離島居民疏散推演.html
@@ -8,7 +8,7 @@ tags: blog
 author: 陳怡菱
 ---
 
-<p>《產經新聞》1 月 28 日報導了日本政府以中國侵略西南諸島為前提，預計在 3 月中旬將進行驗證沖繩離島居民避難方法的首次圖上訓練（Imagination game）。 除了日本政府單位和沖繩縣政府以外，還有與那國島等離島的 5 個市町村會參與，圖上訓練將嘗試運用聯絡系統、民航機和船舶以迅速進行避難。 由於擔心台海衝突波及西南諸島，日本政府希望將此延伸到實際讓居民進行疏散的演練。</p>
+<p>《產經新聞》1 月 28 日報導了日本政府以中國侵略西南諸島為前提，預計在 3 月中旬將進行驗證沖繩離島居民避難方法的首次圖上訓練（Imagination game）。&nbsp;除了日本政府單位和沖繩縣政府以外，還有與那國島等離島的 5 個市町村會參與，圖上訓練將嘗試運用聯絡系統、民航機和船舶以迅速進行避難。 由於擔心台海衝突波及西南諸島，日本政府希望將此延伸到實際讓居民進行疏散的演練。</p>
 
 
 
@@ -60,7 +60,7 @@ author: 陳怡菱
 
 
 
-<p class="pqnote">對此，台灣教授協會會長陳俐甫 2 月 2 日在《為和平而戰——成形中的台美日同盟》座談會上，在提及日本政府在台海戰爭可能爆發時疏散居民的規劃設想後，他提到 823 砲戰時國民政府疏散了許多金門、馬祖的平民到台灣新北市和桃園市（當時的台北縣和桃園縣）。現在全球都在關注台海熱戰的風險，陳俐甫質疑「現今的中華民國政府有問金門人要撤退到哪嗎？有民防演習或相應規劃嗎？」，在缺乏對戰爭的想像、以及政府規劃，可能會有不少金門人會透過小三通撤退到「廈門」，因為台灣不會攻擊中國。</p>
+<p class="pqnote">對此，台灣教授協會會長陳俐甫 2 月 2 日在<a href="https://www.pourquoi.tw/?s=%E7%82%BA%E5%92%8C%E5%B9%B3%E8%80%8C%E6%88%B0%E2%94%80%E6%88%90%E5%BD%A2%E4%B8%AD%E7%9A%84%E5%8F%B0%E7%BE%8E%E6%97%A5%E5%90%8C%E7%9B%9F%E3%80%8B" target="_blank" rel="noopener">《為和平而戰——成形中的台美日同盟》</a>座談會上，在提及日本政府在台海戰爭可能爆發時疏散居民的規劃設想後，他提到 823 砲戰時國民政府疏散了許多金門、馬祖的平民到台灣新北市和桃園市（當時的台北縣和桃園縣）。現在全球都在關注台海熱戰的風險，陳俐甫質疑「現今的中華民國政府有問金門人要撤退到哪嗎？有民防演習或相應規劃嗎？」，在缺乏對戰爭的想像、以及政府規劃，可能會有不少金門人會透過小三通撤退到「廈門」，因為台灣不會攻擊中國。</p>
 
 
 
