--- a/_posts/2023-02-05-INMEDIA-給十九歲的我-張婉婷自爆無准許證拍日本單車賽-好威武咁扮有晒permit入去.html
+++ b/_posts/2023-02-05-INMEDIA-給十九歲的我-張婉婷自爆無准許證拍日本單車賽-好威武咁扮有晒permit入去.html
@@ -21,4 +21,5 @@ author: 獨媒報導
 <p>對於有受訪女生不滿拍攝工作，張婉婷在節目中表示，沒有預料到有「反叛」的情況：「我冇仔女，我點知人哋係會反叛？我唔知幾多歲係會反叛。」張提到受訪學生就讀中三時突然罵她，「話識你老鼠啦…係閙得好勁嘅，有啲鬧到Cameraman都唔敢開機，因爲有少少粗口喺度」；又稱學生有意表現自己是個粗豪和有個性的人：「一見到面就XYZ你咁，好流利嘅。」之後有老師告訴她，才得知自己並非被針對，而是學生正值青春期喜歡講粗口。</p>
 <p>作爲該校舊生，她又談到自己的成長經歷，稱自己「個樣好乖，冇人知道我係跩嘅」，經常與朋友在校内煮飯；又曾慫恿同學半夜出走露營，「但因爲乖樣啦，旁邊啲人俾人罰晒，我就冇事。後來覺得自己冇義氣，都會舉手認係我。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/1BH1GTw16A" title="DSC_8242"><img src="https://live.staticflickr.com/65535/52655655154_f8f8f8f75c_b.jpg" width="1024" alt="DSC_8242" /></a></p>
+<p><strong>【2月6日更新】張婉婷在2月5日暫停放映前，出席最後一場謝票活動。她再就事件回應記者，指她們抵達日本時未獲發許可，所以「搏住先」，及後已獲得許可。被問到有否向李慧詩表明訪問來意。張婉婷稱不可以親自聯絡運動員，至於為何不在訪問時道明來意，她稱時間不足，故即時進行訪問，指事前已跟領隊介紹。</strong></p>
 </div></div></div>
