--- a/_posts/2023-02-05-INMEDIA-puma-7人足球賽-唐建文領軍奪冠-很有成功感.html
+++ b/_posts/2023-02-05-INMEDIA-puma-7人足球賽-唐建文領軍奪冠-很有成功感.html
@@ -13,7 +13,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/Cv0MfN3682" title="DSC_5581"><img src="https://live.staticflickr.com/65535/52670486206_f13c8b68ec_b.jpg" width="1024" alt="DSC_5581" /></a></p>
 <p><strong>未有加盟低組別球隊  欲享受「無目的」足球</strong></p>
 <p>《獨媒》問到近況，「唐文」就咧咀大笑，稱已半年沒有踢足球，最近才與朋友、中學同學踢衛生波。唐建文透露，有低組別球隊邀請他效力，但均婉拒了。他表示，希望能在享受的環境下踢足球，「唔想再喺有目的嘅地方下踢波，想好自由、開心，同啲朋友傾吓計、笑吓踢一場比賽，多過有目的我一定要贏咁去踢。」</p>
-<p>唐建文持有亞洲足協B級教練牌照，但退役後未有執起教鞭。他感謝Puma 邀請出任今次活動的教練，帶領一班年輕球員一起進步：「小朋友會需要經驗，見到佢哋慢慢去成長，其實覺得幾開心。做教練，令到佢哋比完賽有得著，係幾有成功感。」</p>
+<p>唐建文持有亞洲足協B級教練牌照，但退役後未有執起教鞭。他感謝PUMA 邀請出任今次活動的教練，帶領一班年輕球員一起進步：「小朋友會需要經驗，見到佢哋慢慢去成長，其實覺得幾開心。做教練，令到佢哋比完賽有得著，係幾有成功感。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/L9kc0hGQLT" title="DSC_5702"><img src="https://live.staticflickr.com/65535/52669982562_d20a4a0210_b.jpg" width="1024" alt="DSC_5702" /></a></p>
 <p><strong>成冠軍教練  唐建文：有熱誠、想學就會有進步空間</strong></p>
 <p>今次PUMA 7人足球賽，在去年12月舉行遴選日，在100名球員中選出部份球員，分成四支球隊，由郭嘉諾、盧比度、法比奧及唐建文分別揀選及訓練球員。唐建文帶領的Team Future 成功殺入決賽，球隊在法定時間上半場落後一球，但一眾年輕球員未有放棄，最終追和同由前港超聯球員的法比奧帶領的Team King。Team Future 最後更在互射十二碼擊敗 Team King 奪得冠軍。</p>
