--- a/_posts/2023-02-06-INMEDIA-初選47人案-區諾軒-趙家賢-鍾錦麟和林景楠4人將任控方證人-料下周一傳召.html
+++ b/_posts/2023-02-06-INMEDIA-初選47人案-區諾軒-趙家賢-鍾錦麟和林景楠4人將任控方證人-料下周一傳召.html
@@ -12,7 +12,7 @@ author: 獨媒報導
 <p>18名被告今早正式答辯，當中伍健偉說：「法官閣下，我顛覆極權國家政權未成功，我承認控罪 」，鄒家成逐字高喊：「不！認！罪！」，梁國雄則說：「無罪可認，對抗暴政無罪，無罪可認。」（見<a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E3%80%90%E5%88%9D%E9%81%B847%E4%BA%BA%E6%A1%88%E3%80%9118%E8%A2%AB%E5%91%8A%E7%AD%94%E8%BE%AF-%E4%BC%8D%E5%81%A5%E5%81%89%E8%AA%8D%E7%BD%AA%EF%BC%9A%E6%88%91%E9%A1%9B%E8%A6%86%E6%A5%B5%E6%AC%8A%E5%9C%8B%E5%AE%B6%E6%94%BF%E6%AC%8A%E6%9C%AA%E6%88%90%E5%8A%9F-%E6%A2%81%E5%9C%8B%E9%9B%84%EF%BC%9A%E7%84%A1%E7%BD%AA%E5%8F%AF%E8%AA%8D%EF%BC%8C%E5%B0%8D%E6%8A%97%E6%9A%B4%E6%94%BF%E7%84%A1%E7%BD%AA">另稿</a>）</p>
 <p><strong>控方上周始交專家證人證供 官質疑會對被告不公</strong></p>
 <p>控辯雙方現時未能同意所有承認事實，控方望傳召有關社交媒體的專家證人，就 Facebook 及 YouTube 等內容作供，並指僅9名被告同意將相關內容納為承認事實（admitted facts）。主控萬德豪指於1月收到相關證供後，已盡快將證供交予辯方考慮，頭兩份證供於1月16日提交、第3份於2月3日提交，並將於今天提交第4份證供，涉警長6533。</p>
-<p>法官李運騰多次追問，控方會否認為延遲向被告提供證供會造成不公，又指若控方一直未收到證供，於控方案情完結前最後一天才提交是否有問題。萬稱那會非常不公，但強調現時沒有出現此情況，因控方已盡快提交，又重申辯方有至少一至兩星期準備。</p>
+<p>法官李運騰多次追問，控方會否認為延遲向被告提供證供會造成不公，又指若控方一直未能收到相關證供，直至控方案情完結前最後一天才交予辯方是否有問題。萬稱那會非常不公，但強調現時沒有出現此情況，因控方已盡快提交，又重申辯方有至少一至兩星期準備。</p>
 <p>李運騰續指，控方將專家報告交辯方後，辯方需時找專家審視能否同意該供詞；若被告正申請法援，更需時報價決定尋找哪位專家，該專家亦需時撰寫報告以審視能否同意控方專家報告，反問該些程序是否能於兩星期內完成。萬德豪重申現時情況並非如此，李運騰反指他似乎頗「樂觀」，萬再稱控方案情共有55天，辯方會有足夠時間準備最終回應。控方其後又一度指，望能與所有被告就承認事實達成共識，惟陳慶偉指這只是妄想。</p>
 <p><strong>辯方稱上周始收大量文件 申下周一前不傳召控方證人</strong></p>
 <p>代表黃碧雲及林卓廷的大律師沈士文表示，直至上月才收到來自控方的1萬3千頁新文件，包括同案被告的證供，並於上周三（2月1日）才收到1,200項沒有標題的未被使用材料（unused materials）。他又引控方指，將會一邊讀出開案陳詞，一邊播放影片，預料需時2至3日才能完成。</p>
