--- a/_posts/2023-02-06-INITIUM-早报-美方打捞中国气球残骸后将用于分析-不会交还中方.html
+++ b/_posts/2023-02-06-INITIUM-早报-美方打捞中国气球残骸后将用于分析-不会交还中方.html
@@ -34,6 +34,6 @@ author:
 <p>特卡琴科上个月曾呼吁乌克兰所有教会改在12月25日庆祝圣诞节。UGCC的信徒人数不到乌克兰总人口的十分之一，是第一个更改圣诞节日期的乌克兰教会。</p>
 <h3>Google宣告推出Bard应用对抗ChatGPT</h3>
 <p>OpenAI公司开发的人工智能机器人聊天应用ChatGPT近月引起科技行业广泛关注。Google公司周一宣布推出一个名为“Bard”的应用，与ChatGPT相竞争。</p>
-<p>Google公司CEO<a href="https://blog.google/technology/ai/bard-google-ai-search-updates/">皮柴（Sundar Pichai）周一发文宣告</a>此消息，称Bard已经对测试者开放，将在“未来几周”向公众发布。</p>
-<p>他还介绍，Bard寻求将广袤的世界知识与人类大型语言模型的力量、智慧和创造力相结合，利用网络信息提供新鲜、高质量的回应。</p>
+<p>Google公司CEO<a href="https://blog.google/technology/ai/bard-google-ai-search-updates/">皮柴（Sundar Pichai）周一发文宣告</a>此消息，称Bard已经向部分人开放测试，未来几周将向更大范围公众开放。</p>
+<p>他还介绍，Bard寻求将世界知识的广度与Google大型语言模型的力量、智慧和创造力相结合，利用网络信息提供新鲜、高质量的回复。</p>
 <p>就在皮柴发布消息几分钟后，<a href="https://www.theverge.com/2023/2/6/23574185/microsoft-event-date-time-openai-bing-chatgpt">微软公司也宣告</a>将于美国时间2月7日举行重要新闻发布会。传媒猜测发布会可能涉及微软与OpenAI的合作，据传微软的搜索应用Bing将与ChatGPT整合。</p><figure class="image"><a class="image" href="https://theinitium.com/subscription/initium_plus/?utm_source=initium/?utm_medium=article/?utm_campaign=1stlaunchpic" target="_blank"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2021/06/initium_plus_app.png?imageView2/1/w/2538/h/2039/format/jpg" referrerpolicy="no-referrer"></a></figure><p><small class="u-font-sans">我们推出<a href="https://theinitium.com/subscription/initium_plus/?utm_source=initium/?utm_medium=article/?utm_campaign=1stlaunchbottom%20target=" _blank">端 Plus 会员计划</a>，邀请你们成为独立新闻的守护者，帮助我们守护端，也帮助我们继续守护各地独立记者，支持他们产出更多优质的华文调查报导。</small></p><p><small class="u-font-sans">本刊载内容版权为端传媒或相关单位所有，未经<a href="mailto:editor@theinitium.com" target="_blank">端传媒编辑部</a>授权，请勿转载或复制，否则即为侵权。</small></p>
