--- a/_posts/2023-02-05-PQ-憂有心人士操控選舉-歐洲議會投票限制-政治廣告-投放方式.html
+++ b/_posts/2023-02-05-PQ-憂有心人士操控選舉-歐洲議會投票限制-政治廣告-投放方式.html
@@ -24,7 +24,7 @@ author: 王雪俐
 
 
 
-<figure class="wp-block-image size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/960a99a9-歐盟、投票（圖／european-parliament／cc-by-nc-nd-2.0）-.jpg" alt="" class="wp-image-126617" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/960a99a9-歐盟、投票（圖／european-parliament／cc-by-nc-nd-2.0）-.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/960a99a9-歐盟、投票（圖／european-parliament／cc-by-nc-nd-2.0）--300x199.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/960a99a9-歐盟、投票（圖／european-parliament／cc-by-nc-nd-2.0）--768x509.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>歐洲議會以 433 票贊成，61 票反對，110 票棄權通過《政治廣告規範》（圖／European Parliament／CC BY-NC-ND 2.0）</figcaption></figure>
+<figure class="wp-block-image size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/960a99a9-歐盟、投票（圖／european-parliament／cc-by-nc-nd-2.0）-.jpg" alt="" class="wp-image-126617" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/960a99a9-歐盟、投票（圖／european-parliament／cc-by-nc-nd-2.0）-.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/960a99a9-歐盟、投票（圖／european-parliament／cc-by-nc-nd-2.0）--300x199.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/960a99a9-歐盟、投票（圖／european-parliament／cc-by-nc-nd-2.0）--768x509.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>歐洲議會以 433 票贊成，61 票反對，110 票棄權通過《政治廣告規範》（圖／European Parliament／CC BY-NC-ND 2.0）</figcaption></figure>
 
 
 
