--- a/_posts/2023-02-07-INITIUM-台东炸寒单-肉身的鞭炮洗礼.html
+++ b/_posts/2023-02-07-INITIUM-台东炸寒单-肉身的鞭炮洗礼.html
@@ -12,24 +12,24 @@ author: 陈焯煇,许伯崧
             <figcaption itemprop="caption">2023年2月5日，台东炸寒单。<span class="credit">摄：陈焯煇/端传媒</span></figcaption></figure><p>台东，这个位于台湾东部的城市，正上演一场睽违两年的“炮战”。</p>
 <p>农历正月14日开始，这个远离台北都会圈的城镇，将展开连续三天共26场的炮炸肉身寒单民俗活动；由于疫情影响，这个在台东有逾70年历史的元宵盛会，此前已停办两年。</p>
 <p>以鞭炮轰炸出巡神轿，是从清朝流传至今的民间习俗，尽管各地仍保有寒单爷信仰与炸寒单，如今仅剩台东仍保留“肉身”炸寒单的民间习俗，也被形容是炸得“最猛烈”的一役。</p>
-<p>台湾民俗学者、国立台中教育大学台湾语文学系副教授林茂贤曾<a href="https://www.facebook.com/watch/?v=1116294998811875">解释</a>，台东昔日有“后山”之称，原本并无汉人居住，后来随著河洛人、客家人，以及1949年后，随国民政府来台移民的迁入，加上原先即在此处生活的原住民族卑南族与阿美族，使台东成为族群组成多元复杂的地区。</p>
-<p>然而，由于族群之间歧异性大且彼此对立，且在移民社会，为了在族群复杂的社会有立足之地，必须彰显自己的“勇敢”，因此台东炸寒单愈炸愈激烈、甚至是以“肉身”作为炮炸的对象，都是为了展现族群男性的勇猛。</p>
-<p>时至今日，过往的族群对立也逐渐迈向融合，多元族群也体现在炸寒单的成员组成。例如站在竹轿上的寒单爷可能是汉人、轿夫是原住民，而炮手则是客家人；过往炸寒单用以比拚族群胆试与勇气的仪式，如今是族群融合的象征。</p>
+<p>台湾民俗学者、国立台中教育大学台湾语文学系副教授林茂贤曾<a href="https://www.facebook.com/watch/?v=1116294998811875">解释</a>，台东昔日有“后山”之称，原本并无汉人居住，后来随著河洛人、客家人，以及1949年后，随国民政府来台移民的迁入，加上原先即在此处生活的卑南族与阿美族，使台东成为族群组成多元复杂的地区。</p>
+<p>然而，由于族群之间歧异性大、彼此对立，且在移民社会，为在族群复杂的社会有立足之地，必须彰显自己的“勇敢”，因此台东炸寒单愈炸愈激烈、甚至是以“肉身”作为炮炸的对象，都是为了展现该族群男性阳刚。</p>
+<p>时至今日，过往的族群对立也逐渐迈向融合，多元族群也体现在炸寒单的成员组成。例如站在竹轿上的寒单爷可能是汉人、轿夫是原住民，炮手则是客家人；过往炸寒单用以比拚族群胆识与勇气的仪式，如今是族群融合的象征。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230206-photo-handan/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/91543c64b3ec4deeac976074c8f85715.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年2月5日，台东，遶境期间，民众钻轿脚祈福。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">2023年2月5日，台东，遶境期间，民众钻轿脚祈福。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption></figure>
 
-<p>寒单爷又称玄坛爷，相传为商朝峨眉山罗浮洞主赵公明，因统领招宝天尊、纳珍天尊、招财使者、利市仙君等部将，被民间奉为武财神。传说寒单爷生性怕冷，故元宵出巡时信徒会朝祂扔掷鞭炮驱寒、暖身；而在民俗观点中，有著鞭炮炸得愈旺，当年财运愈好之意。此外，为彰显寒单爷的神威，故替身以赤身上阵，只在头上系上一条红布巾、上身打著赤膊仅著一条红短裤、护目镜与蒙上口鼻，手持榕树枝迎向眼前炮阵，壮烈程度为全台之最。</p>
-<p>除了武财神专司财库外，另个民间观点也称寒单爷为“流氓神”，相传寒单爷在世时是祸害一方的地方流氓，经常鱼肉乡民，后经感化后痛改前非，站上轿子要求乡民以鞭炮轰炸洗去他一身罪恶借此赎罪。</p>
+<p>寒单爷又称玄坛爷，相传为商朝峨眉山罗浮洞主赵公明，因统领招宝天尊、纳珍天尊、招财使者、利市仙君等部将，被民间奉为武财神。传说寒单爷生性怕冷，故元宵出巡时信徒会朝祂扔掷鞭炮驱寒、暖身；在民俗观点中，则有著鞭炮炸得愈旺，当年财运愈好之意。此外，为彰显寒单爷的神威，故替身以赤身上阵，只在头上系上一条红布巾、上身打著赤膊仅著一条红短裤、护目镜与蒙上口鼻，手持榕树枝迎向眼前炮阵，壮烈程度为全台之最。</p>
+<p>寒单爷除了被视为武财神专司财库外，另个民间观点则称寒单爷为“流氓神”，相传寒单爷在世时是祸害一方的地方流氓，经常鱼肉乡民，后经感化痛改前非，站上轿子要求乡民以鞭炮轮番轰炸以洗去一身罪恶。</p>
 <p>这样的流氓与赎罪的情节，也在台湾纪录片《<a href="https://giloo.ist/video/433?episodeId=434">炸神明</a>》中呈现。</p>
-<p>《炸神明》跟拍了多名黑道兄弟，记录炸寒单对他们的意义与连结，希望透过担任寒单爷的肉身，得到神明的护佑与加持，然而看似上轿“自虐”的数十分钟，也是透过肉体苦痛所展开的赎罪之旅。</p>
+<p>《炸神明》导演跟拍了多名黑道兄弟，记录炸寒单对他们的意义及连结，他们希望透过担任寒单爷的肉身，得到神明的护佑与加持，以求人生顺遂；而看似上轿“自虐”的数十分钟，则是透过肉体的苦痛所展开的赎罪之旅。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230206-photo-handan/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/184599b727a04e1bafaed17756b7364b.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年2月5日，台东炸寒单。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">2023年2月5日，台东炸寒单。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption></figure>
 
 <p>事实上，1950年代起，炸寒单活动在台东逐渐流行，但1984年，警方视寒单爷为偶像迷信、炸寒单则为“略具组织形态之不良活动”，因此<a href="https://nrch.culture.tw/twpedia.aspx?id=4469">严加取缔</a>，直到1989年才解禁。此前，寒单爷的金身由信众轮流供奉，直到解禁隔年后，才由当年的炉主李建智请回家供奉，并设立玄武堂。目前台东炸寒单由玄武堂主办，堂主李建智亦为国民党籍台东县议员。</p>
-<p>2月初的台东正值晚冬初春，夜晚的海边仍令人感到寒意，头系上红布巾的寒单爷踏上竹轿，额上绑上“寒单爷”的黄色布条，脸上戴上护目镜，遮蔽了口鼻，旁人无法辨识他的表情。</p>
-<p>赤膊裸身的寒单爷，胸前挂著天师印，手持榕枝，仿佛一夫当关、万军莫敌之姿，轿下炮手向空中掷出第一串燃炮，响炮声在黑夜中炮破，如同黑洞，将现场所有的喧哗声吸纳，唯一的声响，只剩震耳欲聋的爆炸声。</p>
+<p>2月初的台东正值晚冬初春，夜晚的海边仍令人感到些许寒意，头系上红布巾的寒单爷踏上竹轿，额上绑上“寒单爷”的黄色布条，脸上戴上护目镜“全副武装”，旁人无法辨识他的脸上应该有著什么样的表情。</p>
+<p>赤膊裸身的寒单爷，胸前挂著天师印，手持榕枝，仿佛一夫当关、万军莫敌之姿，轿下炮手向空中不断地掷出燃炮，响炮声在黑夜中炮破，声响称不上有节奏性，但如同黑洞，旋即将现场所有的喧哗声吸纳；此刻唯一的声响，只剩震耳欲聋的爆炸声。</p>
 <p>竹轿上的寒单爷在狂轰猛炸的数十分钟内，他眼前的景象为何？耳里又传来什么声音？鞭炮产生的烟灰很快地笼罩寒单爷，祂成为迷漫烟雾中若隐若现的一丛剪影，红色的短裤宛如定位座标，在烟雾飘散的间隙刹那，让信众找到寄托的瞬间。</p>
-<p>爆炸产生的火光亮起局部，爆裂的炸裂声响就要让人失去对声音、对空间的辨别，但寒单爷依旧不为所动，将双手向身后延伸，仅抓著竹轿、时而低垂著头、时而昂首向前冲向炮阵。是否有那么一瞬间，轿上的寒单爷也曾感到些许孤独？</p>
+<p>爆炸产生的火光在黑夜中亮起片刻的光明，爆裂的炸裂声响就要让人失去对声音、对空间的感知，但寒单爷依旧不为所动，将双手向身后延伸抓著竹轿，祂时而低垂著头、时而昂首向前冲向炮阵；又是否有那么一瞬间，轿上的寒单爷或许感到些许孤独？</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230206-photo-handan/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/fcfb3917703d49c1a02c0325fdaf5108.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年2月5日，台东炸寒单。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">2023年2月5日，台东炸寒单。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption></figure>
 
