--- a/_posts/2023-02-07-PQ-蕭良嶼-擊落一顆高空氣球以後-目的是破解地對空防禦.html
+++ b/_posts/2023-02-07-PQ-蕭良嶼-擊落一顆高空氣球以後-目的是破解地對空防禦.html
@@ -9,74 +9,27 @@ author: 蕭良嶼
 ---
 
 <p>2023 年二月一日，美國民眾詫異的發現，一顆巨大白色氣球正在緩緩飛躍蒙大拿洲。它飛得太高，體積又太巨大了，不可能是一般的廣告氣球。這顆氣球被判定來自中國，而中國對於讓飛行物體侵入他國領空這件事，只是輕描淡寫的說：「氣球不受控的飄走了。」</p>
-
-
-
 <p>有鑑於無人相信如此巨大的中國高空氣球只是不小心隨風亂飛剛好經過具有空軍基地跟核武發射井的蒙大拿洲，美國民眾跟媒體於是直接稱其為「間諜氣球」，並且期望拜登政府有所作為。</p>
-
-
-
 <p>拜登政府確實回應了這顆侵門踏戶的氣球。美國時間二月五日，F-22 戰鬥機攜帶響尾蛇飛彈（AIM-9X），在南卡羅來納州沿岸約六海里處的海上擊落了中國間諜氣球，並且派員回收碎片進行調查。之所以要等到氣球出海，據官方說法是為了避免戰鬥機用飛彈擊落氣球波及地面平民。</p>
-
-
-
-<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/47113799-folugsyaqaae2g3-1024x681.jpg" alt="" class="wp-image-126739" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/47113799-folugsyaqaae2g3-1024x681.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/47113799-folugsyaqaae2g3-300x199.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/47113799-folugsyaqaae2g3-768x511.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/47113799-folugsyaqaae2g3.jpg 1113w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>美國五角大廈證實由 F-22 戰鬥機發射一枚響尾蛇空對空飛彈（AIM-9X）將中國間諜氣球擊落。<br>圖／International Defence Analysis
-@Defence_IDA</figcaption></figure></div>
-
-
-
+<div class="wp-block-image">
+<figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/47113799-folugsyaqaae2g3-1024x681.jpg" alt="" class="wp-image-126739" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/47113799-folugsyaqaae2g3-1024x681.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/47113799-folugsyaqaae2g3-300x199.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/47113799-folugsyaqaae2g3-768x511.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/47113799-folugsyaqaae2g3.jpg 1113w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>美國五角大廈證實由 F-22 戰鬥機發射一枚響尾蛇空對空飛彈（AIM-9X）將中國間諜氣球擊落。<br />圖／International Defence Analysis<br />
+@Defence_IDA</figcaption></figure>
+</div>
 <p>高空氣球（high altitude balloon）表面上看起來是一種十分古老的作戰技術，二戰時就已經被使用過，尤其是當現代已經發展出間諜衛星技術的時候，更顯得有些怪異跟荒唐。然而如果考慮到二戰時期人類尚未發明手機跟網路，而且高空氣球成本比人造衛星便宜許多，間諜氣球的目的或許沒有想像中那麼單純。</p>
-
-
-
 <p class="pqnote">根據路透社報導，中國解放軍的對外文件顯示，近幾年來中國軍方確實嘗試引入更多高空氣球來進行戰爭預演，假想敵之一可能是美國。解放軍提倡運用高空氣球掩護空中戰力、干擾敵人的地對空防禦的相關論文就發表在中國國營企業船舶重工集團旗下的《艦船電子對抗雜誌》上，該雜誌專注於「信號干擾」跟「電子作戰」。</p>
-
-
-
 <p>解放軍關於高空氣球戰時實用性的論點建立在他們認為「外國」的地面防禦空戰能力太強，中國暫時無法匹敵，因此利用大量廉價的高空氣球進行空中干擾，可以壓制敵方防空預警系統，換取進攻獲勝空間。</p>
-
-
-
 <p>當然，以高空氣球的高度與可能搭載的設備，它們還可以收集對中國導彈計劃有用的高空大氣數據，也可以進行高解析攝影來補充衛星獲得的情報缺口。</p>
-
-
-
 <p class="pqnote">換句話說，這不只是一顆間諜氣球，這是一顆「具有間諜功能的高空侵略任務氣球」，目的是擾亂跟協助戰鬥機或導彈瓦解美國國防部的防空預警。</p>
-
-
-
 <p>而更令人意外的是，這不是美國本土第一次出現來自中國的間諜氣球，美國時間二月六日，CNN 發現了 2022 年的一份國防報告，裡頭明確寫著在上任總統川普任內，最晚至少是 2019 年，三枚中國間諜氣球就曾飛越夏威夷和佛羅里達州，而無人將其擊落。這份報告書題目正叫做〈中華人民共和國高空氣球〉（People’s Republic of China High-Altitude Balloon）。</p>
-
-
-
 <p>當然，會出現這種翻舊帳式的報導，顯示了可能有不少美國人民對於自家領空出現間諜氣球十分不滿，從而讓拜登政府倍感壓力。往好方面想，這次肉眼可見、多人目擊的領空侵犯，已經更進一步激起了美國人民對中國的警覺。</p>
-
-
-
-<div class="wp-block-image"><figure class="aligncenter size-large is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/ec69519e-328994213_1064840868241193_2954592336561069283_n-768x1024.jpg" alt="" class="wp-image-126745" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/ec69519e-328994213_1064840868241193_2954592336561069283_n-768x1024.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/ec69519e-328994213_1064840868241193_2954592336561069283_n-225x300.jpg 225w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/ec69519e-328994213_1064840868241193_2954592336561069283_n-1152x1536.jpg 1152w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/ec69519e-328994213_1064840868241193_2954592336561069283_n.jpg 1536w" sizes="(max-width: 576px) 100vw, 576px" /><figcaption>川普時期前美國國務卿蓬佩奧以左圖小熊維尼持氣球的梗圖諷刺中國間諜氣球入侵美國事件；之後又發現有其他多處間諜氣球的蹤跡，因此網友戲稱應該改為右圖。<br>圖／Twitter，報呱合成</figcaption></figure></div>
-
-
-
+<div class="wp-block-image">
+<figure class="aligncenter size-large is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/ec69519e-328994213_1064840868241193_2954592336561069283_n-768x1024.jpg" alt="" class="wp-image-126745" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/ec69519e-328994213_1064840868241193_2954592336561069283_n-768x1024.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/ec69519e-328994213_1064840868241193_2954592336561069283_n-225x300.jpg 225w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/ec69519e-328994213_1064840868241193_2954592336561069283_n-1152x1536.jpg 1152w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/ec69519e-328994213_1064840868241193_2954592336561069283_n.jpg 1536w" sizes="(max-width: 576px) 100vw, 576px" /><figcaption>川普時期前美國國務卿蓬佩奧以左圖小熊維尼持氣球的梗圖諷刺中國間諜氣球入侵美國事件；之後又發現有其他多處間諜氣球的蹤跡，因此網友戲稱應該改為右圖。<br />圖／Twitter，報呱合成</figcaption></figure>
+</div>
 <p>另外，路透社分析了中國政府招標案之後，發現中國軍事單位和國營研究機構在過去兩年確實購買了高空氣球和相關技術，儘管這些招標文件無法盡信，內容在釋出前顯然經過了大量刻意的模糊跟改寫。</p>
-
-
-
 <p>中國科學院（CAS）下轄的「空天信息創新研究所」是對高空氣球最熱中的國家機構之一，經常在其微信公眾號上發表有關高空氣球的文章。表面上這是一個國營的科學單位，也會發表一些普通的科學文章，但同時卻有不少微信文章是集中於分析高空氣球過去如何融入軍事部署，並且特別關注於研究其他國家如何抵禦氣球帶來的威脅以及如何將其用於進攻。</p>
-
-
-
 <p>根據路透社發掘的政府招標案，該研究所去年九月簽署了一份 316 萬人民幣的契約，表面上是為了中科院的另一個單位開發「平流層氣球平台」。一個月後，它宣布試飛成功，該氣球的高度可達 30 公里，載重量可達 1​​.2 噸。根據該研究所網站上發表的一篇文章，這項實驗是中科院開發「近太空」（near-space，指介於一般飛機跟太空飛行器軌道空間之間的區域）技術的最優先研究項目之一。</p>
-
-
-
 <p class="pqnote">中國大可以說這些氣球都只是純粹科學目的，但諸多事實都顯示不是。氣球刻意飛過美國領空，目的除了刺探敵情，更是為了戰爭預演。中國並不是因為愚蠢不知道有更新技術可以用才派出間諜氣球，而是，「如果用這麼便宜的東西就能增加打垮你的機率，我幹嘛不用」？</p>
-
-
-
 <figure class="wp-block-gallery has-nested-images columns-default is-cropped">
-<figure class="wp-block-image size-large"><img loading="lazy" data-id="126742"  src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/14dbb711-fokzlysayaefuqv.jpg" alt="" class="wp-image-126742" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/14dbb711-fokzlysayaefuqv.jpg 1236w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/14dbb711-fokzlysayaefuqv-247x300.jpg 247w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/14dbb711-fokzlysayaefuqv-844x1024.jpg 844w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/14dbb711-fokzlysayaefuqv-768x932.jpg 768w" sizes="(max-width: 1236px) 100vw, 1236px" /><figcaption>中國流亡海外異議藝術家「巴丟草」（Badiucao）的作品，諷刺中國間諜氣球入侵美國領空，全都在象徵美國政府的美國國鳥「白頭海鵰」眼皮底下。<br>圖／巴丢草 Bad ї ucao @badiucao</figcaption></figure>
-
-
-
-<figure class="wp-block-image size-large"><img loading="lazy" data-id="126743"  src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/ab1ccd32-fokzmu0amaaosbk.jpg" alt="" class="wp-image-126743" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/ab1ccd32-fokzmu0amaaosbk.jpg 1236w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/ab1ccd32-fokzmu0amaaosbk-247x300.jpg 247w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/ab1ccd32-fokzmu0amaaosbk-844x1024.jpg 844w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/ab1ccd32-fokzmu0amaaosbk-768x932.jpg 768w" sizes="(max-width: 1236px) 100vw, 1236px" /><figcaption>中國流亡海外異議藝術家「巴丟草」（Badiucao）的作品，美國國鳥用銳利的鷹爪，輕易地抓破中國間諜氣球，讓小熊維尼連同破裂的氣球一併墜落。<br>圖／巴丢草 Bad ї ucao @badiucao</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" data-id="126742"  src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/14dbb711-fokzlysayaefuqv.jpg" alt="" class="wp-image-126742" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/14dbb711-fokzlysayaefuqv.jpg 1236w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/14dbb711-fokzlysayaefuqv-247x300.jpg 247w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/14dbb711-fokzlysayaefuqv-844x1024.jpg 844w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/14dbb711-fokzlysayaefuqv-768x932.jpg 768w" sizes="(max-width: 1236px) 100vw, 1236px" /><figcaption>中國流亡海外異議藝術家「巴丟草」（Badiucao）的作品，諷刺中國間諜氣球入侵美國領空，全都在象徵美國政府的美國國鳥「白頭海鵰」眼皮底下。<br />圖／巴丢草 Bad ї ucao @badiucao</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" data-id="126743"  src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/ab1ccd32-fokzmu0amaaosbk.jpg" alt="" class="wp-image-126743" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/ab1ccd32-fokzmu0amaaosbk.jpg 1236w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/ab1ccd32-fokzmu0amaaosbk-247x300.jpg 247w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/ab1ccd32-fokzmu0amaaosbk-844x1024.jpg 844w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/ab1ccd32-fokzmu0amaaosbk-768x932.jpg 768w" sizes="(max-width: 1236px) 100vw, 1236px" /><figcaption>中國流亡海外異議藝術家「巴丟草」（Badiucao）的作品，美國國鳥用銳利的鷹爪，輕易地抓破中國間諜氣球，讓小熊維尼連同破裂的氣球一併墜落。<br />圖／巴丢草 Bad ї ucao @badiucao</figcaption></figure>
 </figure><p>The post <a href="https://pourquoi.tw/2023-chinese-spy-balloon-incident/">【蕭良嶼】擊落一顆高空氣球以後：目的是破解地對空防禦？</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
