--- a/_posts/2023-02-08-PQ-英澳2+2部長會談-英國積極參與印太事務-兩艘軍艦永駐印太.html
+++ b/_posts/2023-02-08-PQ-英澳2+2部長會談-英國積極參與印太事務-兩艘軍艦永駐印太.html
@@ -9,27 +9,10 @@ author: 蔡侯塞
 ---
 
 <p>英國與澳洲 2 月 1 至 2 日舉行外交與國防 2+2 年度會談（AUKMIN），並在會後宣布兩國將啟動「經濟安全對話」，應對印太地區日益嚴峻的挑戰，保持全球供應鏈的多樣性，並應對敵對國家經濟脅迫的風險。與此同時，英國也希望在印太地區建立影響力。另一方面，澳洲貿易部長法瑞爾（Don Farrell）2 月 6 日跟中國商務部部長王文濤舉行線上會議，會後表示同意近期前往北京跟王文濤會面。</p>
-
-
-
-<p class="pqnote">英澳會談涵蓋印太安全、對烏克蘭的支持以及 AUKUS，其中後者是美國、英國和澳洲之間的協議將向澳洲提供常規武裝核子動力潛艇技術。澳洲外交部長黃英賢和國防部長馬勒斯（Richard Marles）赴倫敦會見英國外交與國防部長。英國外交大臣柯維立（James Cleverly）說：「我們正共同促進印太地區的繁榮與安全、促進貿易並實現我們重要的氣候目標。」<br><br>英國與澳洲 2+2 部長會談會後的聯合聲明重申台海和平穩定、支持台灣有意義的參與國際組織，並且倡議要與台灣深化經濟、貿易、科技及文化交流關係。</p>
-
-
-
+<p class="pqnote">英澳會談涵蓋印太安全、對烏克蘭的支持以及 AUKUS，其中後者是美國、英國和澳洲之間的協議將向澳洲提供常規武裝核子動力潛艇技術。澳洲外交部長黃英賢和國防部長馬勒斯（Richard Marles）赴倫敦會見英國外交與國防部長。英國外交大臣柯維立（James Cleverly）說：「我們正共同促進印太地區的繁榮與安全、促進貿易並實現我們重要的氣候目標。」</p>
+<p>英國與澳洲 2+2 部長會談會後的聯合聲明重申台海和平穩定、支持台灣有意義的參與國際組織，並且倡議要與台灣深化經濟、貿易、科技及文化交流關係。</p>
 <p>隨著中國影響力的增長，包括中國與索羅門群島去年達成的安全協定，英國和澳洲也都在尋求加強太平洋地區的關係。此外，英國和澳洲還達成貿易協議，預計將在未來幾個月內生效，而英國也在談判尋求加入跨太平洋夥伴關係全面進步協定（CPTPP）。與此同時，英國國際貿易部貿易政策大臣韓斯（Greg Hands）也開始為期三天的越南、馬來西亞和新加坡之行，就英國加入 CPTPP 的影響進行貿易談判。</p>
-
-
-
 <p>另一方面，英國國防大臣華勒斯（Ben Wallace）也在英澳外交與國防 2+2 年度會談後表示：「很重要也令人難過的是，我們意識到基於規則的秩序正受到前所未有的威脅，人權正受到世界各地一系列的威脅，人們正在以一種應有的方式考驗民族國家的主權，這讓我們所有人都擔心。」兩國聯合聲明強調，反對中國在南中國海擴軍，並進行脅迫或破壞穩定的行動。」同時，英國和澳洲的部長們也強調台灣海峽和平與穩定的重要性，這是全球供應鏈的重要水道，反對單方面改變現狀。</p>
-
-
-
 <p>在 AUKUS 協議方面，預計堪培拉將在春季初決定這些潛艦是由美國、英國還是兩者聯合建造。澳洲國防部長馬勒斯說：「AUKUS 潛艦計劃是澳洲歷史上的一個重要時刻。這將改變澳洲的國際地位，將極大地增強我們的能力，並以此增強我們的主權。」此外，英國和澳洲還將全面更新 2013 年雙邊防務與安全合作條約。華勒斯說：「有兩艘英國軍艦將永久駐紮在太平洋地區，以後還會有更多。」</p>
-
-
-
 <p>在澳中關係方面，澳洲貿易部長法瑞爾 2 月 6 日跟中國商務部部長王文濤舉行線上會議，會後表示同意近期前往北京跟王文濤會面。兩國貿易部長之間的對話是三年來的首次。</p>
-
-
-
-<p>參考來源：<br><a href="https://www.politico.eu/article/uk-and-australia-launch-pact-against-chinese-economic-coercion/" target="_blank" rel="noopener">2023/02/02　Politico　UK and Australia launch pact against Chinese economic ‘coercion’</a><br><a href="https://www.reuters.com/world/asia-pacific/australia-china-trade-ministers-hold-virtual-meeting-next-week-abc-2023-01-31/" target="_blank" rel="noopener">2023/01/31　Reuters　Australia and China trade ministers to hold virtual meeting next week</a><br><a href="https://www.reuters.com/world/australia-ministers-discuss-security-trade-uk-trip-2023-02-01/" target="_blank" rel="noopener">2023/02/02　Reuters　Australia ministers to discuss security and trade on UK trip</a><br><a href="https://www.reuters.com/world/asia-pacific/china-willing-restart-trade-exchange-mechanism-with-australia-after-talks-2023-02-06/" target="_blank" rel="noopener">2023/02/06　Reuters　China willing to restart trade dialogue with Australia after talks</a></p><p>The post <a href="https://pourquoi.tw/intlnews-nasaoa-230201-230207-2/">英澳2+2部長會談：英國積極參與印太事務　兩艘軍艦永駐印太</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
+<p>參考來源：<br /><a href="https://www.politico.eu/article/uk-and-australia-launch-pact-against-chinese-economic-coercion/" target="_blank" rel="noopener">2023/02/02　Politico　UK and Australia launch pact against Chinese economic ‘coercion’</a><br /><a href="https://www.reuters.com/world/asia-pacific/australia-china-trade-ministers-hold-virtual-meeting-next-week-abc-2023-01-31/" target="_blank" rel="noopener">2023/01/31　Reuters　Australia and China trade ministers to hold virtual meeting next week</a><br /><a href="https://www.reuters.com/world/australia-ministers-discuss-security-trade-uk-trip-2023-02-01/" target="_blank" rel="noopener">2023/02/02　Reuters　Australia ministers to discuss security and trade on UK trip</a><br /><a href="https://www.reuters.com/world/asia-pacific/china-willing-restart-trade-exchange-mechanism-with-australia-after-talks-2023-02-06/" target="_blank" rel="noopener">2023/02/06　Reuters　China willing to restart trade dialogue with Australia after talks</a></p><p>The post <a href="https://pourquoi.tw/intlnews-nasaoa-230201-230207-2/">英澳2+2部長會談：英國積極參與印太事務　兩艘軍艦永駐印太</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
