--- a/_posts/2023-02-08-INMEDIA-大圍八爪魚天橋拆出口迫人入商場-李梓敬-現階段不應拆卸.html
+++ b/_posts/2023-02-08-INMEDIA-大圍八爪魚天橋拆出口迫人入商場-李梓敬-現階段不應拆卸.html
@@ -21,7 +21,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/01b1R0d37o" title="無標題"><img src="https://live.staticflickr.com/65535/52676419580_045ac407bc_b.jpg" width="1024" alt="無標題" /></a><br /><em>李梓敬</em></p>
 <p>他表示將約見地政總署，商討延期的可行性，又指或有更極烈行動。李梓敬提到，目前居民從地面出入商場需經10多級樓梯，位置亦屬露天，曾有居民跌倒，正考慮向港鐵索償。</p>
 <p>至於有居民稱部分2010年時任沙田區議員的公民力量成員，當時亦贊成港鐵方案。李梓敬引述兩名前沙田區議員潘國山和何厚祥指，當時有關部門提供區議會的資料是完全不足，包括商場具體設計和概念，亦未有提及地契要求商場開放後一年內拆卸天橋，以及從地面進入商場須經10多級樓梯。</p>
-<p>《獨媒》已向港鐵查詢是否即將動工，以及預料完工日期，暫未獲回覆。</p>
+<p>《獨媒》向港鐵查詢是否即將動工，以及預料完工日期；港鐵回覆表示，承建商正在進行前期準備工作，將按刊憲內容及地契條款於期限內進行相關工程。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/3J01Z78g10" title="無標題"><img src="https://live.staticflickr.com/65535/52672405564_686e1e2e7f_b.jpg" width="1024" alt="無標題" /></a></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/35t68949YQ" title=" "><img src="https://live.staticflickr.com/65535/52672409704_46fd33cb1f_b.jpg" width="1024" alt=" " /></a></p>
 </div></div></div>
