--- a/_posts/2023-02-07-VOCUS-斧頭英雄的不歸路-誰在帶風向.html
+++ b/_posts/2023-02-07-VOCUS-斧頭英雄的不歸路-誰在帶風向.html
@@ -49,4 +49,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">雖然《斧頭英雄的不歸路》的凱伊的確是一門媒體炒作的活教材，但我覺得這部片的劇本也很是明顯，尤其在最後的律師被殺案，有想要將他營造的較為開放的議題，因為過去凱伊有遭遇過不好的事情，讓他對於跟性相關的事情較為激動，在律師謀殺案的章節時，刻意剪輯認識凱伊的記者訪問他時，凱伊敘述自己過往部好的被侵犯遭於，這明顯也是想增加議題的討論度。</div>
 <div class="draft-block draft--p left">可以說凱伊的事件是由地方事件被網民瘋傳、媒體放大、最後成為輿論焦點，但在最後過氣候被迅速汰換拋棄，成為市場的犧牲品。</div>
 <div class="draft-block draft--p left">在這個快節奏大量資訊的世代，我們常常會被他人餵養一些事情而失去判斷力，以凱伊的事件來說「斧頭砍人」變成迷因大家是覺得有趣好玩，危險跟傷害人的行為則被適度弱化，且視而不見。這也許才是我們如今接受訊息時，仍須警惕的地方：媒體正在餵養我們什麼？我們忽略了什麼？</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/E2r4vg3vdkM"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/E2r4vg3vdkM"></iframe></div>
