--- a/_posts/2023-02-08-INITIUM-张婉婷与港产片轩然大波-当香港人-只能-在电影里追求公义.html
+++ b/_posts/2023-02-08-INITIUM-张婉婷与港产片轩然大波-当香港人-只能-在电影里追求公义.html
@@ -69,7 +69,7 @@ author: 特约撰稿人 红眼 发自香港
 
  
 <p>藉戏中黄子华饰演的颓废律师如何洗心革面、重拾斗志，《毒舌大状》以一个“天有眼”的真理必胜童话赢得了观众掌声，更被形容为让人在戏院里找回香港所失落的公义。但也不是每一个香港人都买《毒舌大状》的帐，随著电影票房高涨，好评如潮，它亦被批评是精神鸦片。诚然，它确实抓紧了好题材，但处理得非常节制，知所进退，始终保持安全的创作距离，甚至是一个远离现实香港的距离。</p><p>电影试图重溯回归初年，良心律师与弱势小众共同义抗权贵菁英的“旧香港”社会格局，如同黄子华义愤填膺的控诉，那个格局中的香港，是如电影最重要金句所言：“法律面前，穷人含撚”（网络用语，形容法律貌似人人平等，实则穷人吃亏。含撚：为男性口交）。当然放在今日，这可以有无限延伸想像，但要知道在今日政治语境里，法律面前，“含撚”的人未必都是穷人，譬如黎智英就不穷，而同样面临重囚审判的人，还有资深大律师、大学教授、前政党领袖。</p><p>被奉为电影精句的八个大字，事实上也正是电影的谨慎去政治化，偷偷回避了香港即使曾经的权贵菁英（或“有钱人”）都也面对重囚审讯的真正现实；是以电影所说的“找回公义”，跟今日政治审讯不断的香港可谓是两个平行世界。</p><p>
-</p><p>过去一两年“法庭剧”于香港大行其道，从电影到舞台剧，无论严肃或喜闹类型，都不乏批判司法制度、法律游戏，或是围绕程序公义的作品。《毒蛇大状》多少观照了后社运年代已成常态的政治审讯，难以估算的秋后算帐。</p>
+</p><p>过去一两年“法庭剧”于香港大行其道，从电影到舞台剧，无论严肃或喜闹类型，都不乏批判司法制度、法律游戏，或是围绕程序公义的作品。《毒舌大状》多少观照了后社运年代已成常态的政治审讯，难以估算的秋后算帐。</p>
 <p></p><p><a class="image" href="https://theinitium.com/article/20230209-culture-hk-movies-and-docus/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/19894d790dcc46b785d2a1e690a85cc5.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="《毒舌大状》剧照。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">《毒舌大状》剧照。<span class="credit">网上图片</span></figcaption><p></p><p>当然，并不是要完全紧扣时代脉搏，直接回应政治现实的才是好作品，即使周冠威这样非常关心社运的电影导演，都会有他的创作低潮，交出令人有所不满的作品；而《毒舌大状》导演吴炜伦未必敢于同样踩界，挑战审查制度，但《毒舌大状》无疑拍得比这几年许多惯打“擦边球”、藏起政治隐喻的取巧作品更有深度，也是一部平衡稳阵的作品。当然，它被讥为另一种形式的维稳电影，向观众灌输“在电影里找到公义”的亢奋，这也无可厚非。</p><p>最大波浪：女魔头兼维稳导演张婉婷？</p><p>
 </p><p>短短几日，张婉婷亦从一名交出真挚青春作品的导演，变成贩卖少女青春，专吃人血馒头的女魔头 —— 也因为她已加盟“说好香港故事”的建制团队，于是再多一个维稳导演的骂名。</p>
