--- a/_posts/2023-02-10-INMEDIA-港甲永義獲批配水庫上蓋建球場-年租一元-須開放三成節數予公眾使用.html
+++ b/_posts/2023-02-10-INMEDIA-港甲永義獲批配水庫上蓋建球場-年租一元-須開放三成節數予公眾使用.html
@@ -10,7 +10,7 @@ author: 獨媒報導
 
 <img src="https://www.inmediahk.net/files/column_images/20230210w.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>甲組聯賽球隊永義日前宣布，向政府申請建球場獲批。球場選址位於牛池灣食水配水庫，地政總署回覆《獨媒》查詢時指，當局以短期租約形式，將用地租予永義慈善基金會有限公司，租期為三年，其後按季續租，租金為象徵式每年一元，每年須開放三成節數予公眾使用。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/S8J261Jw2U" title="DJI_0296"><img src="https://live.staticflickr.com/65535/52677637617_69bcb87acf_b.jpg" width="1024" alt="DJI_0296" /></a></p>
-<p>水務署自2018年起推出開放配水庫上蓋作康樂用途計劃，機構可申請全港110個配水庫作康樂設施。港甲球隊永義周三在Facebook 專頁公布，獲政府批出一幅土地作興建球場，工程將在月中正式展開，引起球迷熱烈討論。</p>
+<p>水務署自2018年起推出開放配水庫上蓋作康樂用途計劃，機構可申請全港101個配水庫上蓋作康樂設施。港甲球隊永義周三在Facebook 專頁公布，獲政府批出一幅土地作興建球場，工程將在月中正式展開，引起球迷熱烈討論。</p>
 <p>翻查署方資料，永義申請獲批的牛池灣食水配水庫，屬黃大仙區內共有八幅相關用地之一，同區五幅配水庫上蓋用地同用作運動場用途。</p>
 <p><strong>去年12月批出租約  不包括商業或營利活動</strong></p>
 <p>《獨媒》向地政總署查詢牛池灣食水配水庫的租約形式，署方指出，在去年12月批准以短期租約形式租予永義慈善基金會有限公司，土地主要用途包括非牟利足球比賽及訓練活動，及經文化體育及旅遊局局長書面批准的其他與足球相關的活動用途，但不包括商業或營利活動。</p>
@@ -19,6 +19,6 @@ author: 獨媒報導
 <p><strong>獲時任體育專員「提醒」申請  曾睇中馬鞍山用地遭反對</strong></p>
 <p>在節目中，主持石金華則透露，永義足球隊班主官永義在4年前的一個聚會上，與時任體育專員楊德強交談，對方提醒他，球隊可以嘗試申請閒置土地興建球場。</p>
 <p>在現時10支港超聯球隊中，只有傑志、港會擁有私人訓練場地，港甲南華同擁有私人訓練場地，惟港會、南華分別位於跑馬地及銅鑼灣的土地，均為港英時期獲政府批出土地，傑志則在2012年獲政府批出土地，並獲馬會支持在石門興建足球訓練中心；永義則是首支申請水務署該計劃，獲批出訓練球隊的業餘球隊。</p>
-<p>《獨媒》在2020年曾報道，永義曾向政府申請短期租用<a href="https://www.inmediahk.net/node/1078511">馬鞍山</a>一幅閒置土地，即位於聽濤雅苑及錦豐苑之間的空置土地，以興建足球訓練中心，民政處當時被指繞過沙田區議會便作地區諮詢，遭到當地居民反對。</p>
+<p>《獨媒》在2020年曾報道，永義曾向政府申請短期租用<a href="https://www.inmediahk.net/node/1078511">馬鞍山</a>一幅閒置土地，即位於聽濤雅苑及錦豐苑之間的空置土地，以興建足球訓練中心，民政處當時被指繞過沙田區議會便作地區諮詢，遭到當區居民反對。</p>
 <p>永義足球隊班主官永義是上市公司永義國際創辦人兼前主席，他一直熱衷本地足球，曾先後入主星島、愉園，並曾出任足總董事。官永義近年亦為註冊成球員，替球隊在甲組聯賽上陣，其兒子官俊傑亦有註冊為球隊球員，二人今季未曾上陣。</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
