--- a/_posts/2023-02-10-INMEDIA-赴英失敗自組英語研討會-李梓敬透露與會者倡放空凳反制缺席領事.html
+++ b/_posts/2023-02-10-INMEDIA-赴英失敗自組英語研討會-李梓敬透露與會者倡放空凳反制缺席領事.html
@@ -15,7 +15,7 @@ author: 獨媒報導
 <p><strong>李梓敬：今日議會比殖民時期更民主</strong></p>
 <p>新民黨立法會議員李梓敬致辭時指，如果英聯邦議會聯合會認為香港情況惡化，更應藉此機會多聆聽。他譴責主辦方的無理指控，又質疑英國在殖民香港的150年間，為何沒有落實議會民主制度。他續指研討會是為了說明現今議會比起殖民時期更民主、更有代表性，強調撤回邀請一事不會打擊士氣，只會令眾人更有決心，而研討會只是說好中國和香港故事的起點。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/181E1SbgsR" title="DSC_3958"><img src="https://live.staticflickr.com/65535/52679175347_a8a7c2ba6e_b.jpg" alt="DSC_3958" /></a><br /><em>簡慧敏</em></p>
-<p>原本代表立法會出席的另一議員簡慧敏以三個P，即Professionalism (專業)、Patriotism (愛國)、Productiity (生產力) 來形容完善後的選舉制度，重申立法會有效率；工聯會立法會議員陳穎欣則表示，在完善選舉制度後參選不再擔心人身安全，並讚道新一屆立法會有更多女性、年輕人參與。她最後指，未來或可再邀請外國政客到港交洋，又笑說相信香港主辦方不會撤回邀請。</p>
+<p>原本代表立法會出席的另一議員簡慧敏以三個P，即Professionalism (專業)、Patriotism (愛國)、Productivity (生產力) 來形容完善後的選舉制度，重申立法會有效率；工聯會立法會議員陳穎欣則表示，在完善選舉制度後參選不再擔心人身安全，並讚道新一屆立法會有更多女性、年輕人參與。她最後指，未來或可再邀請外國政客到港交洋，又笑說相信香港主辦方不會撤回邀請。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/819640S3o4" title="無標題"><img src="https://live.staticflickr.com/65535/52680024914_1f2595623c_b.jpg" width="1024" alt="無標題" /></a><br /><em>梁振英</em></p>
 <p><strong>梁振英：香港立法會較英國議會好</strong></p>
 <p>全國政協副主席、前特首梁振英則批評英國議會撤回邀請做法不合理及諷刺，他續批評現時英國議會的低效率是世界公認，認為香港立法會較英國議會好(Hong Kong has done better, a lot better than the UK)。</p>
