--- a/_posts/2023-02-10-PQ-中國間諜氣球飄出對中新禁令-美擬制裁間諜氣球製造商.html
+++ b/_posts/2023-02-10-PQ-中國間諜氣球飄出對中新禁令-美擬制裁間諜氣球製造商.html
@@ -20,7 +20,7 @@ author: 林藤
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/1696a398-2023-02-11-07.11.32-1024x575.jpg" alt="" class="wp-image-126948" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/1696a398-2023-02-11-07.11.32-1024x575.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/1696a398-2023-02-11-07.11.32-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/1696a398-2023-02-11-07.11.32-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/1696a398-2023-02-11-07.11.32.jpg 1500w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>美國副國務卿雪蔓（Wendy Sherman）2月9日出席聯邦參議院聽證會，針對中國間諜氣球事件回應國務院的作法。<br>圖／翻攝自參議院直播影片</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/1696a398-2023-02-11-07.11.32-1024x575.jpg" alt="" class="wp-image-126948" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/1696a398-2023-02-11-07.11.32-1024x575.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/1696a398-2023-02-11-07.11.32-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/1696a398-2023-02-11-07.11.32-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/1696a398-2023-02-11-07.11.32.jpg 1500w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>美國副國務卿雪蔓（Wendy Sherman）2月9日出席聯邦參議院聽證會，針對中國間諜氣球事件回應國務院的作法。<br>圖／翻攝自參議院直播影片</figcaption></figure></div>
 
 
 
