--- a/_posts/2023-02-13-INMEDIA-屯門居民抗議警基地不明氣體洩漏-13人被控非法集結-3人認罪.html
+++ b/_posts/2023-02-13-INMEDIA-屯門居民抗議警基地不明氣體洩漏-13人被控非法集結-3人認罪.html
@@ -25,6 +25,13 @@ author: 獨媒報導
 <p>首被告當時穿黑衫黑褲、戴黑色帽，以及戴着口罩。其背包有5罐噴漆、兩支膠水、兩支油漆掃、6對勞工手套，以及有示威口號的海報。</p>
 <p>另外，警員18309走近兆軒苑時，見到一大群示威者跑進逸生閣大堂，他立即進入追捕，見一大群黑衣示威者衝進升降機。警方截停第七被告陳家朗，發現他並非住在該處。被告承認地上的防毒面具、黑色鴨舌帽、護目鏡、黑色頭套均屬於他。閉路電視拍攝到被告進入大堂時手持一副護目鏡，並從一名男子手中拿取防毒面具。</p>
 <p>至於高級警司梁廣健則沿良運街從青田路向北掃蕩，他見第十被告14歲男學生連同其他黑衣示威者，從大興行動基地向着他奔跑，於是在良運街將他們截停。被告當時戴着鴨舌帽、泳鏡及手套，臉部有黑色圍巾遮蓋，頸部掛着防毒面罩。被告的背包則有手袖及防熱手套。</p>
+<p><strong>有被告在輕鐵路軌上逃跑時被截停</strong></p>
+<p>就不認罪的被告，控方開案陳詞指，當時第二被告李志斗在海麗花園附近的輕鐵路軌上逃跑，其後被截停，他身上有一隻手套及一罐聚氨酯噴劑。警方在良運街截停第三被告周沛樺，其背包內有兩包膠索帶及手套。</p>
+<p>第四被告陳達富在建生邨商場被截停，他當時穿黑色衫褲、戴着黑色頭套，其袋內有手套。第五被告何奕恆在同地被警長53865截停，期間他嘗試逃走，最後被警長抓着背包制服。他當時戴着黑色鴨舌帽、面上有黑色圍巾，其背包有防毒面具、泳鏡、電筒、手袖及口罩。</p>
+<p>第六被告李嘉熹則在逸生閣被截停，他身上有口罩及手套。他在警誡錄影會面下承認曾到大興行動基地外圍，以向任何有需要的年輕人提供支援。第八被告吳嘉俊亦在逸生閣被截停，他頸部有圍巾，閉路電視顯示他跑入大堂時面部戴着圍巾。另外他身上攜有生理鹽水。</p>
+<p>第九被告許諾在同地被截停，他當時穿黑衫褲、戴手套及口罩，閉路電視顯示他跑入大堂時手持防毒面具，其後交給另一男子。香港電台片段拍攝到被告曾出現在良運街的非法集結。</p>
+<p>第十一被告鄧姓男學生在建生輕鐵站旁的行車路上奔跑，警方嘗試制服時他掙扎，他當時戴着防滑手套，背包有口罩。第十二被告梁文健則在建生社區會堂附近被截停，他跌倒在地上最後被制服，在警誡下承認在天水圍乘搭輕鐵到屯門，並步行往建生。</p>
+<p>最後就第十三被告陸俊恆，當時警長33481在商場外設立防線，有一群人包圍叫囂指罵，被告站在輕鐵站形跡可疑，最後被截停。他被搜出兩支伸縮金屬棒、殖民時期香港旗、美國旗、護目鏡及勞工手套。</p>
 <p>13人同被控一項「非法集結」罪，控罪指他們於2019年10月30日，在屯門大興警察行動基地的公眾地方參與非法集結。</p>
 <p>其中7人另被控一項「在身處非法集結時使用蒙面物品罪」，包括何明軒、李志斗、陳達富、何奕恆、吳嘉俊、許諾、17歲男學生。</p>
 <p>周沛樺另被一項「管有適合作非法用途的工具」罪，涉管有兩包膠索帶。</p>
